--- a/plugins/goodlayers-core/include/css/page-builder.css
+++ b/plugins/goodlayers-core/include/css/page-builder.css
@@ -54,7 +54,7 @@
 .gdlr-core-pbf-section:first-child:last-child{ padding-bottom: 30px; }
 
 .gdlr-core-pbf-background{ width: 100%; height: 100%; backface-visibility: hidden; }
-.gdlr-core-pbf-background-wrap{ position: absolute; top: 25px; right: 0px; bottom: 0px; left: 0px; overflow: hidden; border-radius: 0px; }
+.gdlr-core-pbf-background-wrap{ position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; overflow: hidden; border-radius: 0px; }
 .gdlr-core-pbf-background-frame{ position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; }
 .gdlr-core-pbf-background-video{ pointer-events: none; }
 .gdlr-core-pbf-background-video video{ width: 100%; height: 100%; }
@@ -2115,7 +2115,7 @@ ul.gdlr-core-product-sub-category li h3{font-size: 18px;margin-top: 24px;margin-
 	.gdlr-core-pbf-wrapper-full-no-space{ max-width: 500px; }
 	.gdlr-core-pbf-wrapper-full-no-space .gdlr-core-pbf-column-content-margin{ padding-left: 30px !important; padding-right: 30px !important; }
 	.gdlr-core-pbf-background-frame{ display: none; }
-	.gdlr-core-pbf-background{ background-attachment: inherit !important; } /* fix safari problem */
+	.gdlr-core-pbf-background{ width: 400px; height: 300px; } /* fix safari problem */
 	.gdlr-core-pbf-sidebar-wrapper{ margin: 0px !important; }
 
 	.gdlr-core-column-extend-left > .gdlr-core-pbf-background-wrap{ margin-left: -30px; margin-right: -30px; } 
